--- a/web/mean_to_do_list/src/app/components/to-do-list/to-do-list.component.html
+++ b/web/mean_to_do_list/src/app/components/to-do-list/to-do-list.component.html
@@ -14,6 +14,13 @@
             <div class="flex">
               {{ task.title }}
               <mat-chip disabled>{{ task.label }}</mat-chip>
+              <button
+                mat-mini-fab
+                aria-label="delete-icon"
+                (click)="deleteTask(task)"
+              >
+                <lucide-icon name="Trash2"></lucide-icon>
+              </button>
             </div>
           </div>
         </ng-container>
@@ -33,6 +40,13 @@
             <div class="flex">
               {{ task.title }}
               <mat-chip disabled>{{ task.label }}</mat-chip>
+              <button
+                mat-mini-fab
+                aria-label="delete-icon"
+                (click)="deleteTask(task)"
+              >
+                <lucide-icon name="Trash2"></lucide-icon>
+              </button>
             </div>
           </div>
         </ng-container>
